--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 
     <div class="box">
         <input type="text" id="value"><button class="submit">+</button>
+
     <div id="inputs">
         <ul id="todo-list">
-
         </ul>
     </div>
+
+    </div>
+    
     </section>
 </body>
 <script src="script.js"></script>
